--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ng5-material",
+  "name": "mapdrops",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --disable-host-check",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,8 +23,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@mapbox/togeojson": "^0.16.0",
+    "axios": "^0.18.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "mapbox-gl": "^0.44.2",
+    "ngx-mapbox-gl": "^1.0.0-rc.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -34,6 +38,7 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/mapbox-gl": "^0.44.1",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
