--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.3",
     "@types/express": "~4.0.36",
     "@types/passport": "^0.4.4",
     "@types/passport-facebook": "^2.1.8",
