--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,12 @@
     "angularfire2": "^5.0.0-rc.6.0",
     "axios": "^0.18.0",
     "core-js": "~2.4.1",
+    "d3": "^5.1.0",
+    "d3-selection-multi": "^1.0.1",
     "express": "~4.10.0",
     "firebase": "^4.12.1",
     "hammerjs": "~2.0.8",
+    "lodash": "^4.17.5",
     "mapbox-gl": "^0.44.2",
     "rxjs": "~5.5.2",
     "socket.io": "~2.0.3",
