--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,8 @@
     "hammerjs": "~2.0.8",
     "lodash": "^4.17.5",
     "mapbox-gl": "^0.44.2",
+    "oauth": "^0.9.15",
+    "qs": "^6.5.1",
     "rxjs": "~5.5.2",
     "socket.io": "~2.0.3",
     "zone.js": "~0.8.14"
@@ -42,10 +44,10 @@
     "@angular/cli": "~1.5.0",
     "@angular/compiler-cli": "~5.0.0",
     "@angular/language-service": "~5.0.0",
+    "@types/express": "~4.0.36",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "@types/express": "~4.0.36",
+    "@types/node": "^6.0.106",
     "@types/socket.io-client": "~1.4.29",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
